--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/brigand/babel-plugin-app-require/issues"
   },
-  "homepage": "https://github.com/brigand/babel-plugin-app-require#readme"
+  "homepage": "https://github.com/brigand/babel-plugin-app-require#readme",
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0"
+  }
 }
